--- a/style.css
+++ b/style.css
@@ -14,8 +14,12 @@
     display: flex;
     justify-content:space-around;
     padding: 20px;
-    margin-bottom: 5px;
+    position: fixed;
+    left: 0;
+    right: 0;
+    background-color: #1f2937;
 }
+
 
 /*logo*/
 .logo{
@@ -62,7 +66,8 @@ span{
     display: flex;
     align-items: center;
     padding: 20px;
-    gap: 300px;
+    gap: 400px;
+    padding-top: 120px;
 }
 
 /*section left sub-header*/
@@ -106,8 +111,10 @@ button a{
 .right-more img{
     width: 450px;
     height: 250px;
-    border-radius: 5px;
+    border-radius: 10px;
     margin-bottom: 30px;
+    margin-top: 30px;
+
 }
 
 
@@ -190,6 +197,36 @@ button a{
 ::-webkit-scrollbar-thumb{
     background-color: #3882f6;
 }
+
+/*sign up section*/
+.popup{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 80px;
+    color: white;
+}
+
+.popup .container{
+    background-color: #3882f6;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 70px 40px;
+    border-radius: 10px;
+    width: 85%;
+}
+
+.sub-popup{
+    display: flex;
+    flex-direction: column;
+}
+
+.popup .button{
+    border: 2px solid white;
+    border-radius: 10px;
+}
+
 
 /*footer*/
 .footer{
